force-app/main/default/objects/Case_Verification__c/Case_Verification__c.object-meta.xml
<CustomObject>
    <label>Case Verification</label>
    <nameField>
        <displayFormat>Verification-{000000}</displayFormat>
        <label>Verification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>