force-app/main/default/objects/Case_Verification__c/fields/Address_Verfied__c.field-meta.xml
<CustomField>
    <fullName>Address_Verfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Verfied</label>
    <type>Checkbox</type>
</CustomField>