force-app/main/default/objects/Case_Verification__c/fields/Birthdate_Verified__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthdate Verified</label>
    <type>Checkbox</type>
</CustomField>