force-app/main/default/objects/Case_Verification__c/fields/Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Name_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Verified</label>
    <type>Checkbox</type>
</CustomField>