force-app/main/default/objects/Case_Verification__c/fields/Phone_Verified__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Verified</label>
    <type>Checkbox</type>
</CustomField>